# snake_game

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  snake_game.cpp  snake_game.h
src/: CMakeLists.txt  game.c  game.h  game_structure.c  game_structure.h  main.c  minunit.h  test_game.c  test_game_structure.c
templates/: tester.c
