# CMakeList.txt : CMake project for snake_game, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("snake_game")

# Add source to this project's executable.
add_executable (snake_game "snake_game.cpp" "snake_game.h")

# TODO: Add tests and install targets if needed.
